# toy_database

./: .env  Cargo.toml
migrations/2024-02-10-153351_create_articles/: up.sql
src/: db_connection.rs  lib.rs  main.rs  schema.rs
src/handlers/: articles.rs
src/models/: article.rs
