[package]
name = "toy_database"
version = "0.1.0"
edition = "2021"
description = "A toy project to test the creation of REST API endpoints using a Rust framework."

[dependencies]
actix-web = "4.5.1"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"